[package]
name = "sortbytime"
version = "0.1.0"
authors = ["Roman Frołow <rofrol@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "1.0.8", features = ["ssl"] }
env_logger = "0.7.0"
futures = "0.1.29"
serde = "1.0.101"
serde_json = "1.0.40"
validator = "0.9.0"
validator_derive = "0.9.0"
serde_derive = "1.0.101"
kuchiki = "0.7.3"
chrono = "0.4.9"
derive_more = "0.15.0"
