[package]
name = "sortbytime"
version = "0.1.0"
authors = ["Roman Frołow <rofrol@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "2.0.0", features = ["openssl"] }
env_logger = "0.7.1"
futures = "0.3.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
validator = "0.10.0"
validator_derive = "0.10.0"
kuchiki = "0.8.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
actix-rt = "1.0.0"
